fixed button on mobile+ seperated blogStyle sheet

--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -18,19 +18,6 @@ body {
 
 
 
-.whereWeWrite {background-color: white;
-				margin-top: 2em;
-				padding: 0em .75em;
-				border-radius: 2em
-				} 
-.whereWeWrite > p {padding-left: .75em;
-					text-indent: 1em;
-					line-height: 1.5em;}
-/*this div is currently only used in wholesaling.html*/
-
-
-
-
 /*Makes  the ghost div border, centers it, and aligns its text*/
 #ghostTop {margin: 8em auto;
 			border: 1px solid white;
