--- a/Stylesheets/main768.css
+++ b/Stylesheets/main768.css
@@ -18,17 +18,6 @@ body {
 
 
 
-.whereWeWrite {background-color: white;
-				margin-top: 2em;
-				padding: 0em .75em;
-				border-radius: 2em
-				} 
-.whereWeWrite > p {padding-left: .75em;
-					text-indent: 1em;
-					line-height: 1.5em;}
-/*this div is currently only used in wholesaling.html*/
-
-
 #main {
 margin-top: 95%; } /*this is where the sooth scroll lands, it isn't visible.*/
 
